--- a/challenge.html
+++ b/challenge.html
@@ -6,51 +6,64 @@
     <title>The Design of the 1960s</title>
 </head>
 <body>
+    <header>
+        <h1>The History of Design</h1>
+        <img src="/img/rockroll.jpg" alt="Rock and Roll Poster">
+    </header>
+<main>
     <h1>The Design of the 1960s</h1>
         <p>The <strong>nineteen-sixties</strong> were a vibrant time in the world of design in which
          increasing <em>internationalism</em> and <em>experimentation</em> flourished. This website 
          pays tribute to some of the great designers and landmark design moments of that pivotal 
          and unforgettable decade.</p>
 
-    <h2>Significant Designers</h2>
-    <ul>
-        <li>Paul Rand</li>
-        <li>Muriel Cooper</li>
-        <li>Ikko Tanaka</li>
-        <li>The husband and wife team of</li>
-            <ul>
-                <li>Ray Eames</li>
-                <li>Charles Eames</li>
-            </ul>
-        <li>Saul Bass</li>
-        <li>Margaret Calvert</li>
-        <li>Yusaku Kamekura</li>
-        <li>Herb Lubalin</li>
-        <li>Shigeo Fukuda</li>
-        <li>Milton Glaser</li>
-        <li>Massimo Yignelli</li>
-    </ul>
+    <section>
+        <h2>Significant Designers</h2>
+        <ul class="signif-design">
+            <li>Paul Rand</li>
+            <li>Muriel Cooper</li>
+            <li>Ikko Tanaka</li>
+            <li>The husband and wife team of</li>
+                <ul>
+                    <li>Ray Eames</li>
+                    <li>Charles Eames</li>
+                </ul>
+            <li>Saul Bass</li>
+            <li>Margaret Calvert</li>
+            <li>Yusaku Kamekura</li>
+            <li>Herb Lubalin</li>
+            <li>Shigeo Fukuda</li>
+            <li>Milton Glaser</li>
+            <li>Massimo Yignelli</li>
+        </ul>
+    </section>
 
-    <h2>Top Typefaces of 1960s Style</h2>
-    <ol>
-        <li>Avant Garde</li>
-        <li>Cooper Black</li>
-        <li>Futura</li>
-        <li>Helvetica</li>
-        <li>Univers</li>
-        <li>Eurostile</li>
-        <li>Impact</li>
-        <li>Sabon</li>
-        <li>Bauhaus</li>
-        <li>Baby Teeth</li>
-    </ol>
-    
+    <section>
+        <h2>Top Typefaces of 1960s Style</h2>
+        <ol class="typefaces">
+            <li>Avant Garde</li>
+            <li>Cooper Black</li>
+            <li>Futura</li>
+            <li>Helvetica</li>
+            <li>Univers</li>
+            <li>Eurostile</li>
+            <li>Impact</li>
+            <li>Sabon</li>
+            <li>Bauhaus</li>
+            <li>Baby Teeth</li>
+        </ol>
+    </section>
+</main>
     <hr>
 
-    <small>
-        Website by Ana Masias<br>
-        Created on 09/06/2023
-    </small>
+    <footer>
+        <small>
+            Website by Ana Masias<br>
+            Created on 09/06/2023<br>
+            <a href="https://asnuntuck.edu" target="_blank">Asnuntuck Community College</a>
+
+        </small>
+    </footer>
 
 </body>
 </html>
