--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <h1>My Website for Web Class Assignments</h1>
 
-    <img src="/img/olympics-snoboard-256.jpg" alt="Olympic snowboarder on half pipe">
+    <img src="/img/dog-1024.jpeg" alt="Dog laying down">
 
     <p>purpose and bio</p>
 
