--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
 
     <img src="/img/dog-1024.jpeg" alt="Dog laying down">
 
-    <p>purpose and bio</p>
+    <p>The purpose of this site is to showcase how dogs can benefit humans. This goes towards physically,
+        emotionally and more. I have a huge love for dogs and have always found
+        ways to keep them in my life, and I would love to have more.</p>
+    </p>
 
     <section class="assignments">
         <ul>
