--- a/challenge.html
+++ b/challenge.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Design of the 1960s</title>
+    <link rel="stylesheet" href="/css/challenge-style.css">
 </head>
 <body>
     <nav>
@@ -20,7 +21,7 @@
     </header>
 <main>
     <h1>The Design of the 1960s</h1>
-        <p>The <strong>nineteen-sixties</strong> were a vibrant time in the world of design in which
+        <p class="site-intro">The <strong>nineteen-sixties</strong> were a vibrant time in the world of design in which
          increasing <em>internationalism</em> and <em>experimentation</em> flourished. This website 
          pays tribute to some of the great designers and landmark design moments of that pivotal 
          and unforgettable decade.</p>
