--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <ul>
             <li><a href="/index.html">Home</a></li>
             <li><a href="/challenge.html">Challenge</a></li>
-            <li><a href="#">Recipe</a></li>
+            <li><a href="/recipe.html">Recipe</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
     </nav>
@@ -30,7 +30,7 @@
             <li><a href="/challenge.html">Weeks 2 and 3 Assignments: Basic HTML</a></li>
             <li><a href="/challenge.html">Week 3: Links, Semantic HTML</a></li>
             <li><a href="//https://tangerine-cascaron-f45c98.netlify.app/">Week 4: Netlify</a></li>
-            <li><a href=""></a></li>
+            <li><a href="/recipe.html">Week 5: Recipe</a></li>
             <li><a href=""></a></li>
             <li><a href=""></a></li>
             <li><a href=""></a></li>
